{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 207,
  "lineage": "216ba19c-3455-ed09-d0aa-33e9d118ac6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-bastian",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04facb3ed127a2eb6",
            "arn": "arn:aws:ec2:eu-west-1:713644423419:instance/i-0a0a94f1d957c7180",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0a94f1d957c7180",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "insance-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0651267224ae672c6",
            "private_dns": "ip-10-0-44-124.eu-west-1.compute.internal",
            "private_ip": "10.0.44.124",
            "public_ip": "34.242.172.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0103ba82eb1c8a95a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0da30caebf43378",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c82308aae8663223",
              "sg-0fbf0d43dea1ad4e2"
            ]
          },
          "dependencies": [
            "aws_key_pair.insance-key",
            "aws_security_group.allow-incoming-remote-ssh",
            "aws_security_group.allow-outgoing-internal-ssh",
            "aws_subnet.public-subnet-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-db-server-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04facb3ed127a2eb6",
            "arn": "arn:aws:ec2:eu-west-1:713644423419:instance/i-044818091be446119",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044818091be446119",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "insance-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a157bda86cc1216e",
            "private_dns": "ip-10-0-174-20.eu-west-1.compute.internal",
            "private_ip": "10.0.174.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a9d15c69521934b8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c1dfc1f1473d1bc",
            "tags": {
              "Name": "db-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a011b06b36609f5b",
              "sg-0b9ec78ed847e8be5"
            ]
          },
          "dependencies": [
            "aws_key_pair.insance-key",
            "aws_security_group.allow-incoming-internal-ssh",
            "aws_security_group.allow-outgoing-http",
            "aws_subnet.private-subnet-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-db-server-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04facb3ed127a2eb6",
            "arn": "arn:aws:ec2:eu-west-1:713644423419:instance/i-045c53f5872c2b932",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045c53f5872c2b932",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "insance-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c7371b505e5961f",
            "private_dns": "ip-10-0-208-161.eu-west-1.compute.internal",
            "private_ip": "10.0.208.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01371bdd1aab1094a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a43e49be7a5ff2aa",
            "tags": {
              "Name": "db-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a011b06b36609f5b",
              "sg-0b9ec78ed847e8be5"
            ]
          },
          "dependencies": [
            "aws_key_pair.insance-key",
            "aws_security_group.allow-incoming-internal-ssh",
            "aws_security_group.allow-outgoing-http",
            "aws_subnet.private-subnet-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-web-server-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04facb3ed127a2eb6",
            "arn": "arn:aws:ec2:eu-west-1:713644423419:instance/i-06e82c1382a462ba7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e82c1382a462ba7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "insance-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d77a14411924d504",
            "private_dns": "ip-10-0-36-45.eu-west-1.compute.internal",
            "private_ip": "10.0.36.45",
            "public_ip": "34.249.10.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0defa69e9ace4b0db",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0da30caebf43378",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08afd3f75bc99b38d",
              "sg-0a011b06b36609f5b",
              "sg-0b9ec78ed847e8be5"
            ]
          },
          "dependencies": [
            "aws_key_pair.insance-key",
            "aws_security_group.allow-incoming-http",
            "aws_security_group.allow-incoming-internal-ssh",
            "aws_security_group.allow-outgoing-http",
            "aws_subnet.public-subnet-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-web-server-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04facb3ed127a2eb6",
            "arn": "arn:aws:ec2:eu-west-1:713644423419:instance/i-0b79eb0f08f3ceb8d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b79eb0f08f3ceb8d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "insance-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08970d19853f71f61",
            "private_dns": "ip-10-0-97-192.eu-west-1.compute.internal",
            "private_ip": "10.0.97.192",
            "public_ip": "34.255.181.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0904348f0fefed52f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03359cc0bac7fa41a",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08afd3f75bc99b38d",
              "sg-0a011b06b36609f5b",
              "sg-0b9ec78ed847e8be5"
            ]
          },
          "dependencies": [
            "aws_key_pair.insance-key",
            "aws_security_group.allow-incoming-http",
            "aws_security_group.allow-incoming-internal-ssh",
            "aws_security_group.allow-outgoing-http",
            "aws_subnet.public-subnet-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-magic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0682156840728b4b8",
            "owner_id": "713644423419",
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a05a1d623bfe0757",
            "owner_id": "713644423419",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08a9d9773afc9611b",
            "owner_id": "713644423419",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0682156840728b4b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_internet_gateway.gw-magic",
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0651567e5df53ef49",
            "route_table_id": "rtb-0a05a1d623bfe0757",
            "subnet_id": "subnet-01c1dfc1f1473d1bc"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet-a",
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdf4a4279c8884e2",
            "route_table_id": "rtb-0a05a1d623bfe0757",
            "subnet_id": "subnet-0a43e49be7a5ff2aa"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet-b",
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ef047cb16515b57",
            "route_table_id": "rtb-08a9d9773afc9611b",
            "subnet_id": "subnet-0e0da30caebf43378"
          },
          "dependencies": [
            "aws_internet_gateway.gw-magic",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet-a",
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050b67172290c1f5a",
            "route_table_id": "rtb-08a9d9773afc9611b",
            "subnet_id": "subnet-03359cc0bac7fa41a"
          },
          "dependencies": [
            "aws_internet_gateway.gw-magic",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet-b",
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-incoming-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:security-group/sg-08afd3f75bc99b38d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08afd3f75bc99b38d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-incoming-http",
            "name_prefix": null,
            "owner_id": "713644423419",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-incoming-internal-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:security-group/sg-0b9ec78ed847e8be5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b9ec78ed847e8be5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-incoming-internal-ssh",
            "name_prefix": null,
            "owner_id": "713644423419",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-incoming-remote-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:security-group/sg-0c82308aae8663223",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c82308aae8663223",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-incoming-remote-ssh",
            "name_prefix": null,
            "owner_id": "713644423419",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-outgoing-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:security-group/sg-0a011b06b36609f5b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a011b06b36609f5b",
            "ingress": [],
            "name": "allow-outgoing-http",
            "name_prefix": null,
            "owner_id": "713644423419",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-outgoing-internal-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:security-group/sg-0fbf0d43dea1ad4e2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0fbf0d43dea1ad4e2",
            "ingress": [],
            "name": "allow-outgoing-internal-ssh",
            "name_prefix": null,
            "owner_id": "713644423419",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:subnet/subnet-01c1dfc1f1473d1bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.128.0/18",
            "id": "subnet-01c1dfc1f1473d1bc",
            "map_public_ip_on_launch": false,
            "owner_id": "713644423419",
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:subnet/subnet-0a43e49be7a5ff2aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.192.0/18",
            "id": "subnet-0a43e49be7a5ff2aa",
            "map_public_ip_on_launch": false,
            "owner_id": "713644423419",
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:subnet/subnet-0e0da30caebf43378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/18",
            "id": "subnet-0e0da30caebf43378",
            "map_public_ip_on_launch": true,
            "owner_id": "713644423419",
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:subnet/subnet-03359cc0bac7fa41a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.64.0/18",
            "id": "subnet-03359cc0bac7fa41a",
            "map_public_ip_on_launch": true,
            "owner_id": "713644423419",
            "vpc_id": "vpc-066537c3bb7f63933"
          },
          "dependencies": [
            "aws_vpc.vpc-magic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-magic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:713644423419:vpc/vpc-066537c3bb7f63933",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-048471b8d145dcf82",
            "default_route_table_id": "rtb-07d673bde42381d57",
            "default_security_group_id": "sg-0ded011e1079ca326",
            "dhcp_options_id": "dopt-c9acf2af",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-066537c3bb7f63933",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07d673bde42381d57",
            "owner_id": "713644423419"
          }
        }
      ]
    }
  ]
}